--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bus-icon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SmartBus - Bus Management System</title>
+    <meta name="description" content="Smart Bus Management System for Educational Institutions" />
   </head>
   <body>
     <div id="root"></div>
